// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test RequireJs registrations + registration while getting Automatic registration while getting package 1`] = `
{
  "//cdnjscloudflarecom/ajax/libs/react//umd/reactproductionmin": [
    {
      "filetypes": {
        "js": {
          "dfr": Promise {},
          "urls": [
            "https://cdnjs.cloudflare.com/ajax/libs/react/16.14.0/umd/react.production.min.js",
          ],
        },
      },
      "major": 16,
      "minor": 14,
      "patch": 0,
      "str": "16.14.0",
    },
  ],
}
`;

exports[`Test scoped packages registration, and @-signs in urls Do interpret default as version indication 1`] = `
{
  "foo": [
    {
      "filetypes": {
        "js": {
          "urls": [
            "https://foo.bar@4.5.2/foo.js",
          ],
        },
      },
      "major": 4,
      "minor": 5,
      "patch": 2,
      "str": "4.5.2",
    },
  ],
}
`;

exports[`Test scoped packages registration, and @-signs in urls Ignore package scope... Its not a version number 1`] = `
{
  "@myscope/mypackage": [
    {
      "filetypes": {
        "js": {
          "urls": [
            "https://www.tired.com/@4.5.2-rc1/foo.js",
          ],
        },
      },
      "major": 4,
      "minor": 5,
      "patch": 2,
      "rc": "rc1",
      "str": "4.5.2-rc1",
    },
  ],
}
`;

exports[`Test scoped packages registration, and @-signs in urls No scope, nor version number, leave the @signs where they are 1`] = `
{
  "mypackage": [
    {
      "filetypes": {
        "js": {
          "urls": [
            "https://www.tired.com/@duffman/foo.js",
          ],
        },
      },
      "major": undefined,
      "minor": undefined,
      "str": "anonymous",
    },
  ],
}
`;

exports[`Test scoped packages registration, and @-signs in urls No version number provided, dont touch the scope 1`] = `
{
  "@myscope/mypackage": [
    {
      "filetypes": {
        "js": {
          "urls": [
            "https://www.tired.com/foo.js",
          ],
        },
      },
      "major": undefined,
      "minor": undefined,
      "str": "anonymous",
    },
  ],
}
`;

exports[`Test scoped packages registration, and @-signs in urls No versionnumber is allowed when converting the url to a package-name 1`] = `
{
  "//wwwtiredcom/@duffman//foo": [
    {
      "filetypes": {
        "js": {
          "urls": [
            "https://www.tired.com/@duffman/@4.20/foo.js",
          ],
        },
      },
      "major": 4,
      "minor": 20,
      "str": "4.20",
    },
  ],
}
`;

exports[`Test scoped packages registration, and @-signs in urls Only respect @version-number to identify the version, ignore package scope 1`] = `
{
  "@myscope/mypackage": [
    {
      "filetypes": {
        "js": {
          "urls": [
            "https://www.tired.com/@4.5.2-rc1/foo.js",
          ],
        },
      },
      "major": 4,
      "minor": 5,
      "patch": 2,
      "rc": "rc1",
      "str": "4.5.2-rc1",
    },
  ],
}
`;

exports[`Test shim functionality check if dependencies an be added to different filetypes 1`] = `
{
  "dependenciesPreLoad": [
    "dep1",
  ],
  "postFactory": [Function],
  "urls": [],
}
`;

exports[`Test shim functionality check if shim exports can be a function 1`] = `
{
  "postFactory": [Function],
  "urls": [],
}
`;

exports[`Test shim functionality check if shims are registered on unknown packages 1`] = `
{
  "js": {
    "dependenciesPreLoad": [
      "dep1",
      "dep2",
    ],
    "postFactory": [Function],
    "urls": [],
  },
}
`;
